# TokenDance

./: .gitignore  AGENTS.md  README.md  index.html  script.js  styles.css
dataset/: ai_posts.json  recommend_posts.json  tech_posts.json
dataset/users/college_tech_award_student_001/: event_search_log.json  profile_skill.md
docs/: gpt-image-2-prompts.md
douyin-base/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
douyin-base/node/: pnpm-lock.yaml
douyin-base/src/: main.ts
douyin-base/src/assets/3d_data/: iphone-17-p-sim.usdz
douyin-base/src/assets/3d_data/glb/: iphone-17-air.glb  iphone-17-pro.glb  iphone-17.glb
douyin-base/src/assets/data/: posts61.json  sports_posts.json
douyin-base/src/components/: BaseFooter.vue  BaseMusic.vue
douyin-base/src/components/slide/: ItemDesc.vue  ItemToolbar.vue  SlideHorizontal.vue
douyin-base/src/constants/: feedPersona.ts
douyin-base/src/mock/: index.ts
douyin-base/src/pages/home/: index.vue
douyin-base/src/pages/home/components/: IndicatorHome.vue
douyin-base/src/pages/home/slide/: AiDailyCard.vue  BrushCompare.vue  FootballPreview.vue  GlbPhoneViewer.vue  Slide4.vue  UsdzPhoneViewer.vue
douyin-base/src/utils/: index.tsx
flow_agent/: pyproject.toml
flow_agent/data/: current_event.json
flow_agent/src/agents/: __init__.py  extract_profile_skill.py  render_push_card.py  run_demo_pipeline.py  select_push_card.py
flow_agent/src/config/: env.py
flow_agent/src/models/: __init__.py  card.py  events.py  profile.py
flow_agent/src/services/: __init__.py  front_matter.py  html_renderer.py  io.py  llm.py  paths.py  profile_skill_doc.py  search.py  text_utils.py
flow_agent/src/templates/: card_template.py
flow_agent/src/utils/bocha_search/: api.py
flow_agent/src/utils/call_llm/: demo.py
flow_agent/tests/: test_agents.py  test_cli_defaults.py  test_front_matter.py  test_render_card_html.py  test_select_push_card.py
